RESOLVED FIXED56747
Web Inspector: [REGRESSION] scripts panel is broken when frontend is reopened.
https://bugs.webkit.org/show_bug.cgi?id=56747
Summary Web Inspector: [REGRESSION] scripts panel is broken when frontend is reopened.
Pavel Podivilov
Reported 2011-03-21 09:17:56 PDT
Web Inspector: [REGRESSION] scripts panel is broken when frontend is reopened. Debugger is enabled too early when reopening frontend. As a result scripts come before resources and scripts panel displays wrong content.
Attachments
Patch. (8.94 KB, patch)
2011-03-22 03:33 PDT, Pavel Podivilov
yurys: review+
Pavel Podivilov
Comment 1 2011-03-22 03:33:57 PDT
Yury Semikhatsky
Comment 2 2011-03-22 04:55:12 PDT
Comment on attachment 86453 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=86453&action=review > Source/WebCore/ChangeLog:6 > + https://bugs.webkit.org/show_bug.cgi?id=56747 Can you provide a test for this?
Pavel Podivilov
Comment 3 2011-03-22 09:28:54 PDT
Pavel Podivilov
Comment 4 2011-03-22 10:55:54 PDT
(In reply to comment #2) > (From update of attachment 86453 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=86453&action=review > > > Source/WebCore/ChangeLog:6 > > + https://bugs.webkit.org/show_bug.cgi?id=56747 > > Can you provide a test for this? Please review the new test at https://bugs.webkit.org/show_bug.cgi?id=56841.
WebKit Review Bot
Comment 5 2011-03-22 11:39:57 PDT
http://trac.webkit.org/changeset/81673 might have broken GTK Linux 32-bit Debug The following tests are not passing: inspector/debugger/debug-inlined-scripts.html
Note You need to log in before you can comment on or make changes to this bug.