Source/WebCore/inspector/front-end/ScriptsPanel.js
@@ -196,7 +196,8 @@ WebInspector.ScriptsPanel = function()
     this._presentationModel.addEventListener(WebInspector.DebuggerPresentationModel.Events.BreakpointRemoved, this._breakpointRemoved, this);
     this._presentationModel.addEventListener(WebInspector.DebuggerPresentationModel.Events.CallFrameSelected, this._callFrameSelected, this);
 
-    if (Preferences.debuggerAlwaysEnabled || WebInspector.settings.debuggerEnabled)
+    var enableDebugger = Preferences.debuggerAlwaysEnabled || WebInspector.settings.debuggerEnabled;
+    if (enableDebugger || InspectorFrontendHost.loadSessionSetting("debugger-enabled") === "true")
         WebInspector.debuggerModel.enableDebugger();
 }
 
@@ -405,6 +406,8 @@ WebInspector.ScriptsPanel.prototype = {
 
         if (this._debuggerEnabled)
             return;
+
+        InspectorFrontendHost.saveSessionSetting("debugger-enabled", "true");
         this._debuggerEnabled = true;
         this.reset(true);
     },
@@ -414,6 +417,7 @@ WebInspector.ScriptsPanel.prototype = {
         if (!this._debuggerEnabled)
             return;
 
+        InspectorFrontendHost.saveSessionSetting("debugger-enabled", "false");
         this._debuggerEnabled = false;
         this.reset(true);
     },
